- Added first implementation of face verification. - Changed OpenAPOI definition to support searching by otp - Minor improvements
